Fix z-index banner

--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -1,3 +1,3 @@
 .carousel.carousel-slider .control-arrow {
-    z-index: 0;
+    z-index: 0 !important;
 }
